--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-google-login",
-  "version": "3.1.1",
-  "description": "Google login without google-services.json",
+  "name": "react-native-file-uploader",
+  "version": "1.0.0",
+  "description": "A module support upload file to server ",
   "license": "MIT",
   "main": "index.js",
   "author": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/leonacky/react-native-google-login.git"
+    "url": "https://github.com/leonacky/react-native-file-uploader.git"
   },
   "keywords": [
     "react",
@@ -19,7 +19,7 @@
     "react-component",
     "android",
     "google",
-    "login",
-    "signin"
+    "file",
+    "upload"
   ]
 }
